# ShareYourCloning_copilot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  creds.backup.json  playground.ipynb  pyproject.toml
datasets/: AddGene_ids.tsv  GenBank_ids.tsv  database_utterances.tsv
