[tool.poetry]
name = "shareyourcloning-copilot"
version = "0.1.0"
description = ""
authors = ["Daniel García Ruano <dgruano.code@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
wit = "^6.0.1"
jupyter = "^1.1.1"
pre-commit = "^4.0.1"
requests = "^2.32.3"
biopython = "^1.84"
nbstripout = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
